# NanoBananaImageEditor-Generator

./: README.md
backend/: .env.example  .gitignore  pyproject.toml  test_image_generation.py
backend/app/: config.py  main.py
backend/app/api/endpoints/: generate.py
backend/app/models/: schemas.py
backend/app/services/: gemini.py
backend/app/utils/: image.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Actions/: ActionBar.tsx
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx
frontend/src/components/Tools/: GeneratePrompt.tsx
frontend/src/components/Workbench/: ContextMenu.tsx  CropOverlay.tsx  DrawingOverlay.tsx  FlowConnections.tsx  ImageNode.tsx  PromptViewer.tsx  ResizeHandles.tsx  SelectionBox.tsx  Toolbar.tsx  Workbench.tsx  ZoomControls.tsx
frontend/src/components/ui/: dropdown-menu.tsx
frontend/src/constants/: canvas.ts
frontend/src/store/: workbenchStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: coordinates.ts  pathCalculation.ts
