[project]
name = "backend"
version = "0.1.0"
description = "Nano Banana Image Editor Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-genai>=0.1.0",
    "pillow>=10.4.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0"
]
